--- a/frontend/markup/css/dashboard.css
+++ b/frontend/markup/css/dashboard.css
@@ -1,112 +1,398 @@
-body{
+.dashboard {
+    min-height: 100vh;
     display: grid;
     grid-template-columns: 425px 1fr;
-    height: 100vh;
-    margin: 0;
-    padding: 0; 
+    background-color: #f5f5f5;
 }
 
-header{
-    background-color: #F5F5F5;
+.dashboard__nav {
+    padding: 60px;
 }
 
-.exit img{
-    margin-left: 20px;
-    margin-top: 20px;
+.dashboard__content {
+    background-color: #ffedd3;
 }
 
-nav ul{
-    display: flex;
-    flex-direction: column;
-    align-items: baseline;
-    list-style: none;  
-}
-
-nav ul li {
-    width: 300px; 
-    height: 50px;
-    margin: 20px 0px;
-    padding: 10px 20px; /* Поля вокруг текста кнопок */
-    background-color: #F5F5F5; 
-    border-radius: 45px; 
-    border: 3px solid #000;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    font-size: 20px;
-    text-align: center;
-    text-transform: uppercase; /* Заглавные буквы */
-    line-height: 50px; /* Выравнивание текста по вертикали */
-}
-
-nav ul li a {
-    color: #000;
+.dashboard__home-button {
+    width: 100px;
+    height: 100px;
+    border: none;
+    display: block;
+    border-radius: 50%;
+    margin-bottom: 70px;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-image: url('../img/icon-door.svg');
+    background-size: 100% 100%;
     text-decoration: none;
-}
-
-nav ul li a:active {
-    background-color: #F3A73A; /* Цвет фона при нажатии на ссылку */
-    color: #FFFFFF; /* Цвет текста при нажатии на ссылку */
-}
-
-nav ul li:active {
-    background-color: #F3A73A; /* Цвет фона при нажатии на область вокруг ссылки */
-}
-
-main{
-    background-color: #FFEDD3;
-}
-
-.container {
-    display: flex; /* Размещаем элементы внутри контейнера в виде flexbox */
-    justify-content: space-between; /* Размещаем элементы так, чтобы они были равномерно распределены по контейнеру */
-    align-items: center; /* Выравниваем элементы по вертикали по центру */
-    margin: 80px 80px; /* Центрируем контейнер по горизонтали */
-}
-
-.photo_user {
-    align-self: flex-start; /* Размещаем .photo_user вверху */
-}
-
-.info_user {
-    width: calc(90% - 150px); /* Ширина блока с информацией о пользователе (оставляем 90% для всего контейнера минус ширина фото пользователя) */
-    /* Здесь можете добавить стили для блока с информацией о пользователе */
-    margin-top: 50px;
-}
-
-input {
-    width: 70%; /* Занимаем всю доступную ширину */
-    height: 50px;
-    margin-bottom: 60px; 
-    padding: 10px;
-    border: none;
-    background-color: #ffffff;
-    border-radius: 10px;
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 700;
-    font-style: normal;
-    font-size: 20px;
-}
-
-.save_button{
-    width: 130px;
-    height: 40px;
-    background-color: #B9E937;
-    border-radius: 10px;
-    border: none;
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 700;
-    font-style: normal;
-    font-size: 15px;
     cursor: pointer;
 }
 
-.save_button:hover {
-    background-color: #406661; /* Изменение цвета фона при наведении */
+.dashboard__logout-button {
+    width: 100px;
+    height: 100px;
+    border: none;
+    display: block;
+    border-radius: 50%;
+    margin-bottom: 70px;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-image: url('../img/icon-logout.svg');
+    background-size: 100% 100%;
+    text-decoration: none;
+    cursor: pointer;
 }
 
-.save_button:active {
-    background-color: #B9E937; /* Изменение цвета фона при нажатии */
+.dashboard__nav-buttons {
+    display: flex;
+    justify-content: space-between;
 }
 
+.dashboard__nav-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.dashboard__nav-item {
+    margin-bottom: 30px;
+}
+
+.dashboard__nav-link {
+    text-decoration: none;
+    border: 3px solid #000;
+    border-radius: 40px;
+    padding: 10px;
+    display: block;
+    text-align: center;
+    font-size: 32px;
+    letter-spacing: -0.01em;
+    color: #000;
+    min-height: 94px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.dashboard__nav-link:hover,
+.dashboard__nav-link:focus,
+.dashboard__nav-link--active {
+    background-color: #f3a73a;
+    color: #fff;
+    border-color: #f3a73a;
+}
+
+.dashboard-profile {
+    display: flex;
+    align-items: flex-start;
+    padding: 80px;
+}
+
+.dashboard-profile__avatar {
+    width: 200px;
+    height: 200px;
+    background-image: url('../img/icon-user.svg');
+    background-size: 100% 100%;
+    margin-right: 80px;
+}
+
+
+.dashboard-profile__text-field {
+    border-radius: 10px;
+    padding: 20px;
+    display: flex;
+    font-weight: 500;
+    font-size: 48px;
+    color: #000;
+    background-color: #fff;
+    margin-bottom: 80px;
+}
+
+.dashboard-profile__text-field-label {
+    margin: 0;
+    padding: 0;
+    margin-right: 20px;
+}
+
+.dashboard-profile__text-field-input {
+    margin: 0;
+    padding: 0;
+    border: none;
+    font-size: inherit;
+    line-height: inherit;
+    flex-grow: 1;
+    text-align: right;
+    outline: none;
+    font-weight: 700;
+}
+
+.dashboard-profile__submit {
+    font-weight: 700;
+    font-size: 32px;
+    letter-spacing: -0.01em;
+    text-align: center;
+    color: #000;
+    background-color: #b9e937;
+    border: none;
+    border-radius: 20px;
+    padding: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.dashboard-budget {
+    padding: 80px;
+}
+
+.dashboard-budget__wrapper {
+    width: 695px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.dashboard-budget__total-amount {
+    background-color: #fff;
+    font-weight: 500;
+    font-size: 120px;
+    color: #000;
+    border-radius: 40px;
+    min-height: 405px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    margin-bottom: 11px;
+}
+
+.dashboard-budget__controls {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 30px;
+    row-gap: 30px;
+    margin-bottom: 30px;
+}
+
+.dashboard-budget__controls-button {
+    font-weight: 700;
+    font-size: 32px;
+    text-align: center;
+    color: #000;
+    border: none;
+    background-color: #b9e937;
+    border-radius: 15px;
+    padding: 15px;
+    text-align: center;
+    cursor: pointer;
+    text-decoration: none;
+    display: block;
+}
+
+.dashboard-budget__controls-button--orange {
+    background-color: #f3a73a;
+}
+
+.dashboard-budget__histoy {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 40px;
+    padding-right: 40px;
+    background-color: #fff;
+    border-radius: 40px;
+}
+
+.dashboard-budget__history-item {
+    display: flex;
+    font-weight: 500;
+    font-size: 24px;
+    color: #000;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.dashboard-budget__history-icon {
+    margin: 0;
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+    object-fit: cover;
+    box-shadow: inset 0px 0px 0px 10px #babdbf;
+}
+
+.dashboard-budget__history__name {
+    margin: 0;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.dashboard-budget__history-amount {
+    margin: 0;
+    margin-left: auto;
+    text-align: right;
+}
+
+.dashboard-category {
+    padding: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.dashboard-category__wrapper {
+    max-width: 365px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.category-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    justify-items: center;
+    column-gap: 17px;
+    row-gap: 17px;
+}
+
+.category-list__item {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: inset 0px 0px 0px 10px #999;
+}
+
+.category-list__icon {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.category-list__name {
+    font-size: 0;
+    line-height: 0;
+}
+
+.dashboard-category__list {
+    padding-left: 44px;
+    padding-right: 44px;
+    margin-bottom: 50px;
+}
+
+.dashboard-category__button {
+    border: none;
+    background-color: #b9e937;
+    border-radius: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    font-weight: 700;
+    font-size: 32px;
+    letter-spacing: -0.01em;
+    text-align: center;
+    color: #000;
+    margin-bottom: 45px;
+    text-decoration: none;
+    display: block;
+}
+
+.dashboard-modal {}
+
+.dashboard-modal__content {
+    width: min-content;
+    min-height: 480px;
+    display: flex;
+    min-width: 875px;
+}
+
+.dashboard-modal__text-field {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 80px;
+}
+
+.dashboard-modal__text-field-label {
+    font-weight: 500;
+    font-size: 64px;
+    color: #000;
+}
+
+.dashboard-modal__text-field-input {
+    border-radius: 15px;
+    border: none;
+    display: block;
+    background-color: #ebebeb;
+    font-family: "HelveticaNeueCyr", sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+    letter-spacing: -0.01em;
+    color: #717171;
+    padding: 20px;
+}
+
+.dashboard-category__delete-button {
+    font-weight: 700;
+    font-size: 20px;
+    color: #000;
+    border: none;
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+}
+
+.dashboard-modal__form {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+
+}
+
+.expenses-modal__category {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 100px;
+    margin-bottom: 35px;
+}
+
+.dashboard-modal__submit-button {
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 32px;
+    text-align: center;
+    color: #000;
+
+    background-color: #f3a73a;
+    border: none;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 15px;
+
+    margin-left: auto;
+    margin-right: auto;
+    align-self: center;
+    margin-top: auto;
+}
+
+.category-modal {}
+
+.category-modal__icons-list {
+    width: min-content;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 48px;
+}
